2014.09.21 Version 1.1.7

* Bugfixes
  - fix several bugs in autocompletion
  - workaround for inaccurate getBoundingClientRect on chrome 37

2014.08.17 Version 1.1.6

* Bugfixes
  - fix regression in double tap to highlight 
  - Improved Latex Mode (Daniel Felder)
  
* API Changes
  - editor.destroy destroys editor.session too (call editor.setSession(null) to prevent that)

* new language modes
 - Praat (José Joaquín Atria)
 - Eiffel (Victorien Elvinger)
 - G-code (Adam Joseph Cook)
 
2014.07.09 Version 1.1.5

* Bugfixes
  - fix regression in autocomplete popup

* new language modes
 - gitignore (Devon Carew)
 
2014.07.01 Version 1.1.4

* New Features
  - Highlight matching tags (Adam Jimenez)
  - Improved jump to matching command (Adam Jimenez)

* new language modes
 - AppleScript (Yaogang Lian)
 - Vala

2014.03.08 Version 1.1.3

* New Features
  - Allow syntax checkers to be loaded from CDN (Derk-Jan Hartman)
  - Add ColdFusion behavior (Abram Adams)
  - add showLineNumbers option
  - Add html syntax checker (danyaPostfactum)
 
* new language modes
  - Gherkin (Patrick Nevels)
  - Smarty

2013.12.02 Version 1.1.2

* New Features
  - Accessibility Theme for Ace (Peter Xiao)
  - use snipetManager for expanding emmet snippets
  - update jshint to 2.1.4
  - improve php syntax checker (jdalegonzalez)
  - add option for autoresizing
  - add option for autohiding vertical scrollbar
  - improvements to highlighting of xml like languages (danyaPostfactum)
  - add support for autocompletion and snippets (gjtorikyan danyaPostfactum and others)
  - add option to merge similar changes in undo history
  - add scrollPastEnd option
  - use html5 dragndrop for text dragging (danyaPostfactum)
  
* API Changes
  - fixed typo in HashHandler commmandManager

* new language modes
  - Nix (Zef Hemel)
  - Protobuf (Zef Hemel)
  - Soy
  - Handlebars

2013.06.04 Version 1.1.1

  - Improved emacs keybindings (Robert Krahn)
  - Added markClean, isClean methods to UndoManager (Joonsoo Jeon)