@@ -201,7 +201,7 @@ var Anchor = exports.Anchor = function(doc, row, column) {
     };
 
     /**
-     * When called, the `'change'` event listener is removed.
+     * When called, the `"change"` event listener is removed.
      *
      **/
     this.detach = function() {
