@@ -12,7 +12,7 @@ var EventEmitter = require("../lib/event_emitter").EventEmitter;
 
 /**
  * new CommandManager(platform, commands)
- * @param {String} platform Identifier for the platform; must be either `'mac'` or `'win'`
+ * @param {String} platform Identifier for the platform; must be either `"mac"` or `"win"`
  * @param {Array} commands A list of commands
  *
  **/
@@ -39,7 +39,7 @@ oop.inherits(CommandManager, MultiHashHandler);
             return false;
         }
         
-        if (typeof command === 'string')
+        if (typeof command === "string")
             command = this.commands[command];
 
         if (!command)
