@@ -150,7 +150,6 @@ exports.getMatchOffsets = function(string, regExp) {
 
 /* deprecated */
 exports.deferredCall = function(fcn) {
-
     var timer = null;
     var callback = function() {
         timer = null;
