@@ -156,9 +156,9 @@ oop.inherits(VScrollBar, ScrollBar);
      * Sets the scroll top of the scroll bar.
      * @param {Number} scrollTop The new scroll top
      **/
-    // on chrome 17+ for small zoom levels after calling this function
-    // this.element.scrollTop != scrollTop which makes page to scroll up.
     this.setScrollTop = function(scrollTop) {
+        // on chrome 17+ for small zoom levels after calling this function
+        // this.element.scrollTop != scrollTop which makes page to scroll up.
         if (this.scrollTop != scrollTop) {
             this.skipEvent = true;
             this.scrollTop = this.element.scrollTop = scrollTop;
@@ -249,9 +249,9 @@ oop.inherits(HScrollBar, ScrollBar);
      * Sets the scroll left of the scroll bar.
      * @param {Number} scrollTop The new scroll left
      **/
-    // on chrome 17+ for small zoom levels after calling this function
-    // this.element.scrollTop != scrollTop which makes page to scroll up.
     this.setScrollLeft = function(scrollLeft) {
+        // on chrome 17+ for small zoom levels after calling this function
+        // this.element.scrollTop != scrollTop which makes page to scroll up.
         if (this.scrollLeft != scrollLeft) {
             this.skipEvent = true;
             this.scrollLeft = this.element.scrollLeft = scrollLeft;
